# face

./: requirements.txt  setup.cfg  setup.py
etc/face/: face.conf
face/: __init__.py  cluster.py  cut.py  main.py  prepare.py  test.py  utils.py
face/cluster/: __init__.py  cluster.py  multihead.py  train.py
face/common/: constants.py  pool.py  utils.py
face/cut/: __init__.py  multihead.py  train.py
face/prepare/: __init__.py  multihead.py  train.py
face/process/: __init__.py  multihead.py  train.py
multihead/: cluster.py  compress.py  cut.py  prepare.py
old/face/: prepare.py
old/multihead/: .cluster.py.swp  main.py
