[metadata]
name = face
version = 2018.05.18
summary = The face framework
description-file = README.md
license = Apache License, Version 2.0
author = JackChan
author-email = jack.chen.8@qq.com
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    face
data_files =
    /etc/face =
        etc/face/face.conf
